fix: dark mode for safari again

--- a/components/content-blocks/Image/styles.module.css
+++ b/components/content-blocks/Image/styles.module.css
@@ -4,12 +4,7 @@
 
   &[data-dark-mode="true"] {
     color-scheme: dark;
-
-    @supports not (
-      color: light-dark(var(--color-font-primary), var(--color-font-invert))
-    ) {
-      color: var(--color-font-invert);
-    }
+    color: var(--color-font-invert);
   }
 
   &[data-float="false"] {
